--- a/DnAboutme/app/src/main/res/layout/activity_main.xml
+++ b/DnAboutme/app/src/main/res/layout/activity_main.xml
@@ -7,39 +7,39 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lê Nguyễn Đăng Định"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.143" />
+        app:layout_constraintVertical_bias="0.031" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="63133714"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="136dp" />
+        tools:layout_editor_absoluteX="157dp"
+        tools:layout_editor_absoluteY="47dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:icon="@android:drawable/ic_menu_sort_by_size"
-        app:iconTint="#AB59C8"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="609dp" />
+        android:text="Ấn vào"
+        tools:layout_editor_absoluteX="144dp"
+        tools:layout_editor_absoluteY="429dp" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="24dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        android:id="@+id/imageView2"
+        android:layout_width="195dp"
+        android:layout_height="263dp"
+        app:srcCompat="@drawable/_80706664_324233010115218_4240574546920501186_n"
+        tools:layout_editor_absoluteX="92dp"
+        tools:layout_editor_absoluteY="118dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
