--- a/PhepToan/app/src/main/res/layout/activity_main.xml
+++ b/PhepToan/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="5dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/purple_200"
+        android:layout_height="50dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        <TextView
+            android:id="@+id/edtSo1"
+            android:layout_width="wrap_content"
+            android:text="So thu 1"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:layout_height="wrap_content">
+        </TextView>
+        <EditText
+            android:layout_width="match_parent"
+            android:hint="moi nhap so "
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/purple_200"
+        android:layout_height="50dp">
+        <TextView
+            android:id="@+id/edtSo2"
+            android:layout_width="wrap_content"
+            android:text="So thu 2"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:layout_height="wrap_content">
+        </TextView>
+        <EditText
+            android:layout_width="match_parent"
+            android:hint="moi nhap so "
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/purple_200"
+        android:gravity="center_horizontal"
+        android:layout_height="50dp">
+        <Button
+            android:id="@+id/edtCong"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"/>
+        <Button
+            android:id="@+id/edtTru"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"/>
+        <Button
+            android:id="@+id/edtNhan"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="*"/>
+        <Button
+            android:id="@+id/edtChia"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/"/>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/purple_200"
+        android:layout_height="50dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Ket qua"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:layout_height="wrap_content">
+        </TextView>
+        <EditText
+            android:id="@+id/edtKetQua"
+            android:layout_width="match_parent"
+            android:hint="Dap an "
+            android:enabled="false"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
