--- a/HealthyApp_63133714/app/src/main/res/layout/viewholder_best_view.xml
+++ b/HealthyApp_63133714/app/src/main/res/layout/viewholder_best_view.xml
@@ -20,14 +20,13 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="133dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favBtn"
-        app:srcCompat="@drawable/orange"
-        />
+        app:srcCompat="@drawable/orange" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
